--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 @import url('./styles/global.css');
 @import url('./styles/resets.css');
 @import url('./styles/variables.css');
-@import url('./styles/weatherDetails/style.css');
-@import url('./styles/weather/style.css');
-@import url('./styles/weatherToday/style.css');
-@import url('./styles/header/style.css');
-@import url('./styles/wethearDeateils/style.css');
+@import url('./styles/header/header.css');
+@import url('./styles/weatherDetails/weatherDetails.css');
+@import url('./styles/weather/weather.css');
+@import url('./styles/weatherToday/weatherToday.css');
