--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -11,7 +11,7 @@
   padding: 12px 16px;
   width: 506px;
   height: 48px;
-  background: var(--bg-opacity);
+  background: var(--bg-input);
   border-radius: var(--radius);
   transition: all 0.2s ease;
 }
@@ -23,13 +23,8 @@
   line-height: 24px;
 }
 .header__search:hover {
-  background: var(--bg-input-active);
+  background: var(--bg-input-hover);
 }
-
-::placeholder {
-  font-family: inherit;
-  color: var(--color-font-secondary);
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-  opacity: 1;
+.header__search:focus-within {
+  background: var(--bg-input-hover);
 }
