--- a/styles/weatherDetails/weatherDetails.css
+++ b/styles/weatherDetails/weatherDetails.css
@@ -8,7 +8,126 @@
   grid-template-rows: 196px 196px;
   gap: calc(var(--margin) / 2);
 }
+
 .weather__card {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(1fr);
+  justify-items: center;
+  padding: calc(var(--margin) / 2);
+  height: 100%;
   border-radius: var(--radius);
   background: var(--bg-opacity);
+  color: var(--color-font-details);
+}
+
+.weather__card-title {
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 20px;
+
+  height: 20px;
+}
+.weather__card-number-value,
+.weather__card-value {
+  font-size: 32px;
+  text-align: center;
+  height: 32px;
+  line-height: 44px;
+}
+.weather__card-number-value {
+  line-height: 32px;
+}
+.wheater__card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.weather__card-percent,
+.weather__card-state {
+  font-size: 12px;
+  line-height: 16px;
+}
+.wheater__card-content .weather__card-state {
+  display: flex;
+  justify-content: center;
+}
+.weather__card-percent {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather__card-bar {
+  position: relative;
+  top: 6px;
+  justify-content: center;
+  --thumb-size: 8px;
+  width: 126px;
+  height: 8px;
+  border-radius: var(--radius);
+  overflow: hidden;
+  background: rgba(218, 218, 218, 0.4);
+}
+
+.progress-line {
+  position: relative;
+  height: 8px;
+  width: 118px;
+}
+.dangers {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  background: radial-gradient(
+    50% 9453.13% at 50% 50%,
+    rgba(84, 84, 84, 0.4) 0%,
+    rgba(138, 138, 138, 0.4) 45.12%,
+    #dadada 100%,
+    rgba(218, 218, 218, 0.4) 100%
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent 0%,
+    white 10%,
+    white 90%,
+    transparent 100%
+  );
+  mask-image: linear-gradient(to right, transparent 0%, white 10%, white 90%, transparent 100%);
+}
+
+.thumb {
+  position: relative;
+  left: 77%;
+  border-radius: 50%;
+  width: var(--thumb-size);
+  height: var(--thumb-size);
+}
+.thumb::after {
+  content: ' ';
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  width: var(--thumb-size);
+  height: var(--thumb-size);
+  z-index: 1;
+}
+.thumb::before {
+  content: ' ';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: calc(var(--thumb-size) + 4px);
+  width: calc(var(--thumb-size) + 4px);
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+
+  opacity: 0.4;
+  z-index: 0;
+  background-color: #ffffff;
 }
