--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@ body {
   align-items: center;
   padding: 32px;
   font-family: 'Raleway', monospace;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 24px;
   letter-spacing: 0;
   font-variant-numeric: lining-nums proportional-nums;
@@ -20,6 +20,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: var(--color-font-secondary);
+  overflow-x: hidden;
 }
 
 .container {
@@ -54,4 +55,10 @@ body {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
+}
+
+@media (max-width: 1279px) {
+  body {
+    overflow-x: scroll;
+  }
 }
