--- a/styles/weatherDetails/weatherDetails.css
+++ b/styles/weatherDetails/weatherDetails.css
@@ -29,16 +29,13 @@
 
   height: 20px;
 }
-.weather__card-number-value,
+
 .weather__card-value {
-  font-size: 32px;
-  text-align: center;
   height: 32px;
-  line-height: 44px;
+  font-size: 32px;
+  line-height: 1.0345;
 }
-.weather__card-number-value {
-  line-height: 32px;
-}
+
 .wheater__card-content {
   display: flex;
   flex-direction: column;
@@ -126,8 +123,7 @@
   width: calc(var(--thumb-size) + 4px);
   transform: translate(-50%, -50%);
   border-radius: 50%;
-
-  opacity: 0.4;
   z-index: 0;
-  background-color: #ffffff;
+
+  background-color: rgba(255, 255, 255, 0.1);
 }
