--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-@import url('./styles/global.css');
 @import url('./styles/resets.css');
 @import url('./styles/variables.css');
 @import url('./styles/header/header.css');
 @import url('./styles/weatherDetails/weatherDetails.css');
 @import url('./styles/weather/weather.css');
 @import url('./styles/weatherToday/weatherToday.css');
+@import url('./styles/slider/slider.css');
+@import url('./styles/footer/footer.css');
+@import url('./styles/weatherForecast/weatherForecast.css');
+@import url('./styles/global.css');
