--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   --color-font-main: #f5f4f4;
   --color-font-secondary: #707070;
-  --bg-opacity: rgb(245 244 244 / 40%);
+  --bg-opacity: rgb(245 244 244 / 30%);
 
   --color-font-details: #202020;
   --bg-gradient-line: radial-gradient(
@@ -16,6 +16,9 @@
   --bg-input: #f5f4f466;
   --bg-input-active: #dadada;
   --bg-input-hover: #dadada;
+
+  --button-color: #a6a6a6;
+  --button-color-active: var(--color-font-main);
 
   --margin: 32px;
   --radius: 8px;
