--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,6 +3,8 @@
   --color-font-secondary: #707070;
   --bg-opacity: rgb(245 244 244 / 30%);
 
+  --color-font-slider-el: #202020;
+
   --color-font-details: #202020;
   --bg-gradient-line: radial-gradient(
     50% 9453.13% at 50% 50%,
