--- a/styles/global.css
+++ b/styles/global.css
@@ -22,12 +22,14 @@ body {
   background-color: var(--color-font-secondary);
   overflow-x: hidden;
 }
-
+*:focus {
+  outline: 1px solid var(--color-font-main);
+}
 .container {
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(18px);
+  backdrop-filter: blur(25px);
   border-radius: var(--radius);
   min-width: 1120px;
 }
