--- a/styles/weatherDetails/weatherDetails.css
+++ b/styles/weatherDetails/weatherDetails.css
@@ -65,7 +65,8 @@
   height: 8px;
   border-radius: var(--radius);
   overflow: hidden;
-  background: rgba(218, 218, 218, 0.4);
+  background-color: rgba(218, 218, 218, 0.4);
+  mask-image: linear-gradient(to right, transparent 0%, white 0%, white 100%, transparent 100%);
 }
 
 .progress-line {
@@ -116,7 +117,7 @@
   z-index: 1;
 }
 .thumb::before {
-  content: ' ';
+  content: '';
   position: absolute;
   top: 50%;
   left: 50%;
@@ -127,4 +128,7 @@
   z-index: 0;
 
   background-color: rgba(255, 255, 255, 0.1);
+
+  -webkit-mask-image: radial-gradient(radial-gradient(at 0px center, white, transparent 100%));
+  mask-image: radial-gradient(radial-gradient(at 0px center, white, transparent 100%));
 }
