--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,8 @@
   --color-font-slider-el: #202020;
 
   --color-font-details: #202020;
+
+  --color-accesability: orangered;
   --bg-gradient-line: radial-gradient(
     50% 9453.13% at 50% 50%,
     rgba(84, 84, 84, 0.4) 0%,
