--- a/styles/global.css
+++ b/styles/global.css
@@ -22,9 +22,7 @@ body {
   background-color: var(--color-font-secondary);
   overflow-x: hidden;
 }
-*:focus {
-  outline: 1px solid var(--color-font-main);
-}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -66,5 +64,28 @@ body {
 @media (max-width: 1279px) {
   body {
     overflow-x: scroll;
+  }
+}
+
+@media (max-width: 886px) {
+  body {
+    overflow-x: none;
+  }
+  .container {
+    width: 720px;
+    max-width: 720px;
+  }
+  .weather {
+    grid-template-columns: 672px;
+    grid-template-areas:
+      'header '
+      'header'
+      'sidebar '
+      'footer ';
+  }
+}
+@media (max-width: 375px) {
+  body {
+    overflow-x: none;
   }
 }
