--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,10 @@
 body {
   min-height: 100dvh;
-  min-width: 1280px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 32px;
+  padding: var(--margin);
   font-family: 'Raleway', monospace;
   font-weight: 400;
   line-height: 24px;
@@ -25,6 +25,7 @@ body {
 
 .container {
   display: flex;
+  height: 100%;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(25px);
@@ -61,31 +62,38 @@ body {
   cursor: default;
 }
 
-@media (max-width: 1279px) {
+@media (min-width: 886px) {
   body {
+    min-width: 1280px;
     overflow-x: scroll;
   }
 }
-
+@media (min-width: 1024px) {
+  .container {
+    min-width: 838px;
+  }
+}
 @media (max-width: 886px) {
   body {
     overflow-x: none;
   }
   .container {
-    width: 720px;
-    max-width: 720px;
-  }
-  .weather {
-    grid-template-columns: 672px;
-    grid-template-areas:
-      'header '
-      'header'
-      'sidebar '
-      'footer ';
+    width: 838px;
+    min-width: 720px;
   }
 }
-@media (max-width: 375px) {
-  body {
-    overflow-x: none;
+@media (max-width: 768px) {
+  .container {
+    min-width: 608px;
+    max-width: 720px;
+  }
+}
+@media (max-width: 640px) {
+  .container {
+    min-width: 343px;
+  }
+  .icon {
+    width: 16px;
+    height: 16px;
   }
 }
