--- a/styles/slider/slider.css
+++ b/styles/slider/slider.css
@@ -18,6 +18,7 @@
   cursor: pointer;
   color: rgba(84, 84, 84, 1);
   transition: color 0.3s ease, background-color 0.3s ease;
+
   &:hover {
     background-color: #dadada;
   }
@@ -59,6 +60,7 @@
     black calc(100% 100% - 18px),
     transparent calc(100%)
   );
+  margin: 0 var(--margin);
 }
 
 .slider__list-element {
