--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,6 @@
 body {
-  min-height: 100dvh;
-
+  /* min-height: 100%; */
+  min-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,18 +61,18 @@ body {
   text-decoration-color: var(--color-font-main);
   cursor: default;
 }
-
-@media (min-width: 886px) {
-  body {
-    min-width: 1280px;
-    overflow-x: scroll;
+@media (max-width: 1279px) {
+  .container {
+    min-width: 822px;
+    max-width: 1120px;
   }
 }
 @media (min-width: 1024px) {
   .container {
-    min-width: 838px;
+    min-width: 960px;
   }
 }
+
 @media (max-width: 886px) {
   body {
     overflow-x: none;
