--- a/styles/slider/slider.css
+++ b/styles/slider/slider.css
@@ -23,6 +23,10 @@
     background-color: #dadada;
   }
 }
+.slider__button:disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+}
 
 .weather__forecast-slider .slider__button:last-child {
   right: 0;
@@ -60,7 +64,7 @@
     black calc(100% 100% - 18px),
     transparent calc(100%)
   );
-  margin: 0 var(--margin);
+  gap: calc(var(--margin) / 2);
 }
 
 .slider__list-element {
@@ -68,7 +72,6 @@
   align-items: center;
   justify-content: space-between;
   padding: 22px 16px;
-  margin-right: calc(var(--margin) / 2);
   border-radius: var(--radius);
   background-color: var(--bg-opacity);
   color: var(--color-font-slider-el);
