--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   --color-font: rgba(245, 244, 244, 0.8);
   display: flex;
-  grid-area: footer;
+  padding: 24px;
   justify-content: center;
   margin-top: -26px;
   padding-bottom: var(--margin);
@@ -24,24 +24,19 @@
 .slider__button:focus-visible {
   outline: 2px var(--color-accesability) solid;
 }
-
 @media (max-width: 886px) {
   .footer {
-    margin-top: -48px;
+    margin-top: -26px;
   }
 }
 @media (max-width: 768px) {
   .footer {
-    margin-top: -64px;
+    margin-top: -42px;
   }
 }
+
 @media (max-width: 640px) {
   .footer {
-    margin-top: -54px;
-  }
-}
-@media (max-width: 375px) {
-  .footer {
-    margin-top: -52px;
+    margin-top: -44px;
   }
 }
