--- a/styles/slider/slider.css
+++ b/styles/slider/slider.css
@@ -48,7 +48,7 @@
 .slider__list {
   display: flex;
   justify-content: space-between;
-  width: 880px;
+  width: 100%;
   overflow: hidden;
   -webkit-mask-image: linear-gradient(
     to right,
@@ -65,6 +65,7 @@
     transparent calc(100%)
   );
   gap: calc(var(--margin) / 2);
+  margin: 0 32px;
 }
 
 .slider__list-element {
@@ -79,6 +80,12 @@
   text-wrap: nowrap;
   white-space: nowrap;
 }
+@media (max-width: 1279px) {
+  .slider__list {
+    margin: 0 32px;
+  }
+}
+
 @media (min-width: 886px) {
   .slider__list-element *:not(:last-child) {
     margin-right: 16px;
@@ -137,6 +144,9 @@
   .slider__list-element *:not(:last-child) {
     margin-right: 12px;
   }
+  .weather__forecast-slider {
+    margin-top: -16px;
+  }
 }
 @media (max-width: 375px) {
   .slider__list {
@@ -171,4 +181,6 @@
   .weather__forecast-slider {
     max-width: 311px;
   }
+}
+@media (max-width: 320px) {
 }
